<resources>
    <string name="app_name">YRapp</string>
    <string name="title_activity_template">TemplateActivity</string>
    <string name="tab_text_2">Groups</string>
    <string name="tab_text_3">Competitions</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="search_title">Search...</string>
    <string name="order_by">Order By</string>
    <string name="action_test_Lis">Test Lis</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="birthday">Birthday</string>
    <string name="streetAddress">Address</string>
    <string name="addressCity">City</string>
    <string name="addressProvince">Province</string>
    <string name="addressZip">Zip</string>
    <string name="emailAddress">Email</string>
    <string name="phoneNumber">Phone</string>
    <string name="gender_prompt">Gender</string>
    <string name="Save_Contact">Save</string>
    <string name="Create_Contact">Create new contact</string>
    <string name="return_to_contact_book">returnButton</string>
    <string name="number_Addrerss">Number</string>
    <string name="addressCompliment">Compl</string>
    <string name="addressCountry">Country</string>
    <string name="startupSP">StartupSP</string>
    <string name="personParent">Person Parent</string>
    <string name="typePerson">PersonType</string>
    <string name="personLevel">Level</string>
    <string name="editContact">Edit Contact</string>
    <string name="tab_text_1">Contacts</string>

    <string name="deleteContact">Delete Contact</string>
    <string name="menuCompetition">Competition</string>
    <string name="menuTarget">Target</string>
    <string name="menuInvoicing">Invoicing</string>
    <string name="menuTeam">Team</string>
    <string name="menuGroup">Group</string>
    <string name="menuPerson">Person</string>
    <string name="nav_header_desc">Person</string>
    <string name="nav_header_title">Person</string>
    <string name="nav_header_subtitle">Person</string>
    <string name="hello_blank_fragment">blank</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="fieldInicialDate">Inicial date</string>
    <string name="fieldFinalDate">Final date</string>
    <string name="fieldGroupName">Group Name</string>
    <string name="fieldFilter">Filter</string>
    <string name="fieldLeader">Leader</string>
    <string name="fieldSave">Save</string>
    <string name="title_activity_menu">YRapp</string>
    <string name="fieldPerson">Person</string>
</resources>
